feat: write order intents to the canonical intent tables (#89)
F04 recorded intents in the private compatibility schema, so the F15 read
projections could never see a real evaluation result. The write path now lands
in trading.order_intent_batches and trading.order_intents.

The canonical row needs more than a candidate carries, so the decided facts the
eligibility check already resolves travel with it: position effect, order
contract and the decision with its reason. OrderIntentRequest mirrors the
canonical CHECKs so an invalid intent is refused where it is readable rather
than by the database.

There is deliberately no source candidate batch on the aggregate. Canonically
the cause of a batch is the official source_event_id; the candidate batch
identifier was the private stand-in used before canonical bot events existed,
and storing both would make two records of one cause. It survives as an input
to input_state_hash, which is where a changed upstream batch is detected.

Amounts are pinned to the canonical scale on the way in. The aggregate is
compared by value to recognise a redelivery, and PostgreSQL always returns
scale 8, so 1.5 written and 1.50000000 read would otherwise look like
different work.

The worker test now stands both schemas up. Stores move to canonical one at a
time, so during the migration that application needs the canonical baseline
and the remaining private compatibility tables together, each under its own
Flyway history table.

No canonical DDL changes, so this needs no authority gate.

Co-authored-by: Claude Opus 5 <noreply@anthropic.com>